add e2e test for external auth